syntax = "proto3";

package gspace;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "gSpaceServer.Protos";

message RegistrationRequest {
  string user_name = 1;
  string space_name = 2;
}

message RegistrationResponse {
  bool success = 1;
}

message NewsMessage {
  google.protobuf.Timestamp news_time = 1;
  string news_item = 2;
}

message NewsResponse {
  bool delivered = 1;
}

message ChatMessage {
  google.protobuf.Timestamp chat_time = 1;
  string chat_item = 2;
  string user_name = 3;
  string space_name = 4;
}

service Gspace {
    rpc RegisterToSpace(RegistrationRequest) returns (RegistrationResponse);
    rpc PublishNews(stream NewsMessage) returns (NewsResponse);
    rpc MonitorSpace(google.protobuf.Empty) returns (stream ChatMessage);
    rpc StartChat(stream ChatMessage) returns (stream ChatMessage);
}